Fixed Raid Events not working Also fixed error in starting raids Raid Boss now scales health based on participants