@@ -1,44 +1,42 @@
 package com.calculusmaster.pokecord.util.helpers;
 
 import com.calculusmaster.pokecord.game.duel.extension.RaidDuel;
-import com.calculusmaster.pokecord.mongo.ServerDataQuery;
 import net.dv8tion.jda.api.EmbedBuilder;
 import net.dv8tion.jda.api.entities.Guild;
 import net.dv8tion.jda.api.entities.TextChannel;
 
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 public class RaidEventHelper
 {
     private static final Map<String, RaidDuel> SERVER_RAIDS = new HashMap<>();
     private static final Map<String, ScheduledFuture<?>> SCHEDULERS = new HashMap<>();
 
-    public static void start(Guild g)
+    public static void start(Guild g, TextChannel channel)
     {
-        ScheduledFuture<?> raidEvent = ThreadPoolHandler.RAID.schedule(() -> startRaid(g), 2, TimeUnit.MINUTES);
+        createRaid(g, channel);
+
+        ScheduledFuture<?> raidEvent = ThreadPoolHandler.RAID.schedule(() -> startRaid(g, channel), 2, TimeUnit.MINUTES);
 
         SCHEDULERS.put(g.getId(), raidEvent);
-
-        createRaid(g);
     }
 
-    public static void createRaid(Guild g)
+    public static void createRaid(Guild g, TextChannel channel)
     {
         RaidDuel raid = RaidDuel.create();
         SERVER_RAIDS.put(g.getId(), raid);
+
+        LoggerHelper.info(RaidEventHelper.class, "Creating new Raid in " + g.getName() + " (" + g.getId() + ")");
 
         EmbedBuilder embed = new EmbedBuilder();
 
         embed.setTitle("A Raid Has Started!");
         embed.setDescription("Join the Raid with `p!raid join`! The battle will begin after a little bit!");
 
-        new ServerDataQuery(g.getId()).getSpawnChannels().stream().map(g::getTextChannelById).filter(Objects::nonNull).collect(Collectors.toList()).get(0).sendMessageEmbeds(embed.build()).queue();
+        channel.sendMessageEmbeds(embed.build()).queue();
     }
 
     public static RaidDuel getRaid(String id)
@@ -56,26 +54,18 @@ public class RaidEventHelper
         return getRaid(serverID).isPlayerWaiting(playerID);
     }
 
-    public static void forceRaid(Guild g)
+    public static void forceRaid(Guild g, TextChannel channel)
     {
         removeServer(g.getId());
 
-        createRaid(g);
+        createRaid(g, channel);
     }
 
-    public static void startRaid(Guild g)
+    public static void startRaid(Guild g, TextChannel channel)
     {
         if(SERVER_RAIDS.get(g.getId()).getWaitingPlayers().isEmpty()) return;
 
-        List<TextChannel> channels = new ServerDataQuery(g.getId()).getSpawnChannels().stream().map(g::getTextChannelById).filter(Objects::nonNull).collect(Collectors.toList());
-
-        if(channels.isEmpty())
-        {
-            LoggerHelper.warn(SpawnEventHelper.class, g.getName() + " has no Spawn Channels! Skipping raid event...");
-            return;
-        }
-
-        channels.get(0).sendMessage("Raid Starting! " + SERVER_RAIDS.get(g.getId()).getWaitingPlayers().stream().map(s -> "<@" + s + ">").toList()).queue();
+        channel.sendMessage("Raid Starting! " + SERVER_RAIDS.get(g.getId()).getWaitingPlayers().stream().map(s -> "<@" + s + ">").toList()).queue();
 
         SERVER_RAIDS.get(g.getId()).start();
 
